--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
+    "axios": "^1.3.2",
     "react": "18.2.0",
     "react-native": "0.71.2",
+    "react-native-keychain": "^8.1.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
-    "react-native-svg": "^13.8.0"
+    "react-native-svg": "^13.8.0",
+    "react-native-toast-message": "^2.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
