--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "axios": "^1.3.2",
+    "google-protobuf": "^3.21.2",
+    "grpc-web": "^1.4.2",
+    "mobx": "^6.8.0",
+    "mobx-react-lite": "^3.4.0",
     "react": "18.2.0",
     "react-native": "0.71.2",
     "react-native-keychain": "^8.1.1",
