--- a/ios/chatapp/Info.plist
+++ b/ios/chatapp/Info.plist
@@ -36,7 +36,13 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Bold.otf</string>
+		<string>Regular.otf</string>
+		<string>Semibold.otf</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,11 +57,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Bold.otf</string>
-		<string>Regular.otf</string>
-		<string>Semibold.otf</string>
-	</array>
 </dict>
 </plist>
