--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mobx-react-lite": "^3.4.0",
     "react": "18.2.0",
     "react-native": "0.71.2",
+    "react-native-audio-recorder-player": "^3.5.3",
     "react-native-image-picker": "^5.0.2",
     "react-native-keychain": "^8.1.1",
     "react-native-safe-area-context": "^4.5.0",
